Update the navbar
- YTP logo now has a "shield" so it can be treated as an image
- Move the city logo the left side with a spacer
- Add menu links
- Don't use fluid container anymore

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
         <div class="meta">
             <p class="join-us">Join Us On</p>
-            <ul class="social horizontal">
+            <ul class="social list-inline">
                 {% for sm in site.social %}
                     <li>
                         <a href="{{ sm.url }}" title="{{ sm.title }}">
