--- a/_sass/partials/_logo.scss
+++ b/_sass/partials/_logo.scss
@@ -55,6 +55,7 @@
 
 .navigation {
     border-top: 1px solid #efefef;
+    font-size: 18px;
     margin-top: 15px;
     padding-top: 15px;
     text-align: center;
