Hide alumni page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,7 +19,7 @@
             </div>
             <div class="col-sm-4 navigation">
                 <ul class="list-inline">
-                    <li><a href="{{ '/alumni' | prepend: site.baseurl }}">Alumni</a></li>
+                    {% comment %}<li><a href="{{ '/alumni' | prepend: site.baseurl }}">Alumni</a></li>{% endcomment %}
                 </ul>
             </div>
         </div>
